<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="70"
        android:background="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:id="@+id/group_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"
            android:src="@drawable/status_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="9"
            android:orientation="horizontal">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/brown"
                app:navigationIcon="@drawable/ic_arrow_back"
                android:layout_marginTop="25dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="Socially"
                android:textColor="@color/white"
                android:textSize="60sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:text="Create An Account and Sign Up"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/circle"
            android:src="@drawable/camera"
            android:clipToOutline="true"
            android:scaleType="centerCrop"/>

        <EditText
            android:id="@+id/userName1"
            android:layout_height="0dp"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:hint="Username"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/yourNameEditText"
            android:layout_height="0dp"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:hint="Your Name"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_height="0dp"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:hint="Your Last Name"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:inputType="textPersonName"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:layout_gravity="center"
            android:hint="Date of Birth"
            android:textColorHint="@color/grey"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dobEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none"
                android:textAlignment="textStart"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey"
                android:textSize="18dp"
                android:layout_marginLeft="-14dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:id="@+id/emailEditText"
            android:layout_height="0dp"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:hint="E-mail"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_height="0dp"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:hint="Password"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createAccountBtn"
            android:layout_width="330dp"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_gravity="center"
            android:text="Create an Account"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"></LinearLayout>

        <ImageView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="10dp"
            android:src="@drawable/linewhite"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>